@startuml

title __GUI's Class Diagram__\n

class GUI.CarController {
    + timer : Timer
    + vehicles : ArrayList<MotorizedVehicle>
    - delay : int
    + CarController()
    ~ LockCoordinates()
    ~ brake()
    ~ gas()
    ~ invertDirection()
    ~ lowerBed()
    ~ outOfPanel()
    ~ raiseBed()
    ~ startCars()
    ~ stopCars()
    ~ turboOff()
    ~ turboOn()
}

class GUI.CarController.TimerListener {
    + actionPerformed()
}

class GUI.CarView {
    ~ brakeButton : JButton
    ~ controlPanel : JPanel
    ~ gasAmount : int
    ~ gasButton : JButton
    ~ gasLabel : JLabel
    ~ gasPanel : JPanel
    ~ gasSpinner : JSpinner
    ~ liftBedButton : JButton
    ~ lowerBedButton : JButton
    ~ startButton : JButton
    ~ stopButton : JButton
    ~ turboOffButton : JButton
    ~ turboOnButton : JButton
    {static} - X : int
    {static} - Y : int
    + CarView()
    - initComponents()
}

class GUI.DrawPanel {
    ~ vehicleGUIs : ArrayList<VehicleGUI>
    + DrawPanel()
    # paintComponent()
}

class GUI.VehicleGUI {
    - image : BufferedImage
    - point : Point
    + VehicleGUI()
    + getImage()
    + getPoint()
    + getVehicle()
    ~ moveIt()
    ~ selectPicPath()
}



  GUI.CarController o-- GUI.CarView : frame
  GUI.CarController +-down- GUI.CarController.TimerListener
  GUI.CarController.TimerListener .up.|> java.awt.event.ActionListener
  GUI.CarView -up-|> javax.swing.JFrame
  GUI.CarView o-- GUI.CarController : carC
  GUI.CarView o-- GUI.DrawPanel : drawPanel
  GUI.DrawPanel -up-|> javax.swing.JPanel
  GUI.VehicleGUI o-- Model.MotorizedVehicle : vehicle

@enduml
